# reddit-scanner

./: .env  .env.example  CLAUDE.md  LICENSE  QA_RESPONSE_ANALYSIS_REPORT.md  README.md  minimal_test.py  pyproject.toml  pytest.ini  reddit_scanner.py  run_tests.py  test-mcp-client.py  test_all_tools.py  test_comprehensive.py  test_final.py  test_nlp_only.py  test_no_comments.py  test_performance.py  test_protocol.py  test_reddit_scanner.py  test_simple.py  test_surgical_fixes.py  test_tool_invocation.py  test_tools.py
docs/plans/: 2025-12-27-market-intelligence-spider-design.md  2025-12-27-market-intelligence-spider-implementation.md
prompts/: blueocean.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_community_discoverer.py  test_thread_inspector.py  test_wiki_extractor.py
tests/unit/: __init__.py  test_rate_limiting.py  test_tool_response.py  test_validation.py
